--- a/public/stylesheets/ie.css
+++ b/public/stylesheets/ie.css
@@ -1,60 +1,89 @@
-/*
-Syntax error: Undefined mixin 'blueprint-ie'.
-        on line 8 of ./public/stylesheets/sass/ie.scss, in `blueprint-ie'
-        from line 8 of ./public/stylesheets/sass/ie.scss
-
-3: // To generate css equivalent to the blueprint css but with your configuration applied, uncomment:
-4: // +blueprint-ie
-5: 
-6: //Recommended Blueprint configuration with scoping and semantic layout:
-7: body.bp {
-8:   @include blueprint-ie(true);
-9:   // Note: Blueprint centers text to fix IE6 container centering.
-10:   // This means all your texts will be centered under all version of IE by default.
-11:   // If your container does not have the .container class, don't forget to restore
-12:   // the correct behavior to your main container (but not the body tag!)
-13:   // Example:
-
-Backtrace:
-./public/stylesheets/sass/ie.scss:8:in `blueprint-ie'
-./public/stylesheets/sass/ie.scss:8
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/tree/mixin_node.rb:62:in `perform!'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/tree/node.rb:305:in `_perform'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/tree/node.rb:213:in `perform'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/tree/node.rb:327:in `perform_children'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/tree/node.rb:327:in `map'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/tree/node.rb:327:in `perform_children'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/tree/node.rb:317:in `perform!'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/tree/rule_node.rb:191:in `perform!'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/tree/node.rb:305:in `_perform'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/tree/node.rb:213:in `perform'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/tree/node.rb:327:in `perform_children'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/tree/node.rb:327:in `map'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/tree/node.rb:327:in `perform_children'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/tree/node.rb:317:in `perform!'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/tree/root_node.rb:59:in `perform!'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/tree/node.rb:305:in `_perform'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/tree/node.rb:213:in `perform'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/tree/root_node.rb:37:in `perform'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/tree/root_node.rb:29:in `render'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/plugin.rb:223:in `update_stylesheet'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/plugin.rb:88:in `update_stylesheets'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/plugin.rb:81:in `each'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/plugin.rb:81:in `update_stylesheets'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/plugin.rb:79:in `each'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/plugin.rb:79:in `update_stylesheets'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/plugin.rb:50:in `check_for_updates'
-/Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/haml-3.0.25/lib/sass/plugin/rack.rb:40:in `call'
-/Users/james/Library/Application Support/Pow/Versions/0.2.2/node_modules/nack/lib/nack/server.rb:146:in `handle'
-/Users/james/Library/Application Support/Pow/Versions/0.2.2/node_modules/nack/lib/nack/server.rb:99:in `start'
-/Users/james/Library/Application Support/Pow/Versions/0.2.2/node_modules/nack/lib/nack/server.rb:86:in `each'
-/Users/james/Library/Application Support/Pow/Versions/0.2.2/node_modules/nack/lib/nack/server.rb:86:in `start'
-/Users/james/Library/Application Support/Pow/Versions/0.2.2/node_modules/nack/lib/nack/server.rb:66:in `loop'
-/Users/james/Library/Application Support/Pow/Versions/0.2.2/node_modules/nack/lib/nack/server.rb:66:in `start'
-/Users/james/Library/Application Support/Pow/Versions/0.2.2/node_modules/nack/lib/nack/server.rb:13:in `run'
-/Users/james/Library/Application Support/Pow/Versions/0.2.2/node_modules/nack/bin/nack_worker:4
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Syntax error: Undefined mixin 'blueprint-ie'.\A         on line 8 of ./public/stylesheets/sass/ie.scss, in `blueprint-ie'\A         from line 8 of ./public/stylesheets/sass/ie.scss\A \A 3: // To generate css equivalent to the blueprint css but with your configuration applied, uncomment:\A 4: // +blueprint-ie\A 5: \A 6: //Recommended Blueprint configuration with scoping and semantic layout:\A 7: body.bp {\A 8:   @include blueprint-ie(true);\A 9:   // Note: Blueprint centers text to fix IE6 container centering.\A 10:   // This means all your texts will be centered under all version of IE by default.\A 11:   // If your container does not have the .container class, don't forget to restore\A 12:   // the correct behavior to your main container (but not the body tag!)\A 13:   // Example:"; }
+/* line 7, sass/ie.scss */
+body.bp {
+  text-align: center;
+}
+/* line 48, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+* html body.bp legend {
+  margin: 0px -8px 16px 0;
+  padding: 0;
+}
+/* line 52, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+html > body.bp p code {
+  *white-space: normal;
+}
+/* line 67, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+body.bp .container {
+  text-align: left;
+}
+/* line 69, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+body.bp sup {
+  vertical-align: text-top;
+}
+/* line 71, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+body.bp sub {
+  vertical-align: text-bottom;
+}
+/* line 73, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+body.bp hr {
+  margin: -8px auto 11px;
+}
+/* line 75, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+body.bp img {
+  -ms-interpolation-mode: bicubic;
+}
+/* line 77, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+body.bp fieldset {
+  padding-top: 0;
+}
+/* line 79, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+body.bp textarea {
+  overflow: auto;
+}
+/* line 82, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+body.bp input.text {
+  margin: 0.5em 0;
+  background-color: white;
+  border: 1px solid #bbbbbb;
+}
+/* line 86, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+body.bp input.text:focus {
+  border: 1px solid #666666;
+}
+/* line 88, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+body.bp input.title {
+  margin: 0.5em 0;
+  background-color: white;
+  border: 1px solid #bbbbbb;
+}
+/* line 92, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+body.bp input.title:focus {
+  border: 1px solid #666666;
+}
+/* line 94, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+body.bp input.checkbox {
+  position: relative;
+  top: 0.25em;
+}
+/* line 97, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+body.bp input.radio {
+  position: relative;
+  top: 0.25em;
+}
+/* line 100, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+body.bp input.button {
+  position: relative;
+  top: 0.25em;
+}
+/* line 103, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+body.bp textarea {
+  margin: 0.5em 0;
+}
+/* line 105, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+body.bp select {
+  margin: 0.5em 0;
+}
+/* line 107, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+body.bp button {
+  position: relative;
+  top: 0.25em;
+}
