--- a/public/stylesheets/sass/partials/_page.scss
+++ b/public/stylesheets/sass/partials/_page.scss
@@ -1,5 +1,5 @@
 // Import the non-default scaffolding module to help us get started.
-@import "blueprint/scaffolding";
+//@import "blueprint/scaffolding";
 
 // This configuration will only apply the
 // blueprint styles to pages with a body class of "bp"
@@ -14,4 +14,4 @@ body.bp {
 
 // Remove the scaffolding when you're ready to start doing visual design.
 // Or leave it in if you're happy with how blueprint looks out-of-the-box
-@include blueprint-scaffolding("body.bp");
+//@include blueprint-scaffolding("body.bp");
