--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -488,79 +488,122 @@ body #content {
   display: inline;
   float: left;
   margin-right: 10px;
-  width: 630px;
+  width: 870px;
   padding-right: 40px;
 }
 /* line 138, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_grid.scss */
 * html body #content {
   overflow-x: hidden;
 }
-/* line 35, sass/screen.scss */
-body #sidebar {
+/* line 34, sass/screen.scss */
+body #content .blog {
+  display: inline;
+  float: left;
+  margin-right: 10px;
+  width: 950px;
+  margin-top: 2em;
+}
+/* line 138, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_grid.scss */
+* html body #content .blog {
+  overflow-x: hidden;
+}
+/* line 38, sass/screen.scss */
+body #content .blog .snip {
+  display: inline;
+  float: left;
+  margin-right: 10px;
+  width: 630px;
+  padding-right: 40px;
+}
+/* line 138, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_grid.scss */
+* html body #content .blog .snip {
+  overflow-x: hidden;
+}
+/* line 45, sass/screen.scss */
+body #content .blog #sidebar {
   display: inline;
   float: left;
   margin-right: 0;
   width: 190px;
-  padding-right: 40px;
   font-size: 80%;
 }
 /* line 138, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_grid.scss */
-* html body #sidebar {
+* html body #content .blog #sidebar {
   overflow-x: hidden;
 }
-/* line 41, sass/screen.scss */
-body #sidebar #details {
+/* line 50, sass/screen.scss */
+body #content .blog #sidebar #details {
   margin-bottom: 1em;
   color: #ccc;
   font-style: italic;
 }
+/* line 57, sass/screen.scss */
+body #content .separator {
+  margin-top: 2em;
+  margin-bottom: 2em;
+  display: inline;
+  float: left;
+  margin-right: 10px;
+  width: 870px;
+  border: none;
+  height: 2px;
+  background-color: #f6f6f6;
+}
+/* line 138, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_grid.scss */
+* html body #content .separator {
+  overflow-x: hidden;
+}
+/* line 67, sass/screen.scss */
+body #content > .blog:first-of-type {
+  margin-top: 0;
+}
 
-/* line 50, sass/screen.scss */
+/* line 73, sass/screen.scss */
 body.bp h1, body.bp h2, body.bp h3, body.bp h4, body.bp h5, body.bp h6 {
   font-family: 'Merriweather';
 }
 
-/* line 56, sass/screen.scss */
+/* line 79, sass/screen.scss */
 body iframe {
   margin-bottom: 1em;
 }
-/* line 60, sass/screen.scss */
+/* line 83, sass/screen.scss */
 body #header {
   background-color: #eee;
   font-size: 50%;
   padding-top: 1em;
   margin-bottom: 5em;
 }
-/* line 65, sass/screen.scss */
+/* line 88, sass/screen.scss */
 body #header a {
   background-color: #ddd;
 }
-/* line 70, sass/screen.scss */
+/* line 93, sass/screen.scss */
 body #footer {
   background-color: #ddd;
   overflow: auto;
   margin-top: 2em;
 }
-/* line 74, sass/screen.scss */
+/* line 97, sass/screen.scss */
 body #footer .inner_content {
   margin-top: 1em;
 }
-/* line 77, sass/screen.scss */
+/* line 100, sass/screen.scss */
 body #footer a {
   background-color: #ccc;
 }
-/* line 82, sass/screen.scss */
+/* line 105, sass/screen.scss */
 body a {
   background-color: #eee;
   color: #000 !important;
   text-decoration: none !important;
   padding: 1px 3px;
 }
-/* line 89, sass/screen.scss */
+/* line 112, sass/screen.scss */
 body a:hover {
   color: #888 !important;
 }
-/* line 94, sass/screen.scss */
+/* line 117, sass/screen.scss */
 body #content .details {
   padding-left: 640px;
   display: inline;
@@ -574,11 +617,11 @@ body #content .details {
 * html body #content .details {
   overflow-x: hidden;
 }
-/* line 102, sass/screen.scss */
+/* line 125, sass/screen.scss */
 body #content .details .created_at {
   font-variant: italics;
 }
-/* line 105, sass/screen.scss */
+/* line 128, sass/screen.scss */
 body #content .details a {
   background-color: none !important;
   color: #888 !important;
