Publish the ruby manor post.

--- a/public/stylesheets/sass/screen.scss
+++ b/public/stylesheets/sass/screen.scss
@@ -134,6 +134,8 @@ body {
     }
     
     .footnotes {
+      border-top: 1px solid #eee;
+      padding-top: 1em;
       font-size: 90%;
     }
   }
