--- a/public/stylesheets/ie.css
+++ b/public/stylesheets/ie.css
@@ -2,87 +2,107 @@
 body.bp {
   text-align: center;
 }
-/* line 48, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+/* line 44, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 * html body.bp legend {
   margin: 0px -8px 16px 0;
   padding: 0;
 }
-/* line 52, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+/* line 48, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 html > body.bp p code {
   *white-space: normal;
 }
-/* line 67, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+/* line 60, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp .container {
   text-align: left;
 }
-/* line 69, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+/* line 62, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp sup {
   vertical-align: text-top;
 }
-/* line 71, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+/* line 64, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp sub {
   vertical-align: text-bottom;
 }
-/* line 73, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+/* line 66, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp hr {
   margin: -8px auto 11px;
 }
-/* line 75, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+/* line 68, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp img {
   -ms-interpolation-mode: bicubic;
 }
-/* line 77, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+/* line 70, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp fieldset {
   padding-top: 0;
 }
-/* line 79, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+/* line 72, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+body.bp legend {
+  margin-top: -0.2em;
+  margin-bottom: 1em;
+  margin-left: -0.5em;
+}
+/* line 76, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+body.bp fieldset, body.bp #IE8#HACK {
+  padding-top: 1.4em;
+}
+/* line 77, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+body.bp legend, body.bp #IE8#HACK {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+/* line 78, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp textarea {
   overflow: auto;
 }
-/* line 82, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+/* line 80, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
+body.bp label {
+  position: relative;
+  top: -0.25em;
+}
+/* line 84, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp input.text {
   margin: 0.5em 0;
   background-color: white;
   border: 1px solid #bbbbbb;
 }
-/* line 86, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+/* line 88, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp input.text:focus {
   border: 1px solid #666666;
 }
-/* line 88, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+/* line 90, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp input.title {
   margin: 0.5em 0;
   background-color: white;
   border: 1px solid #bbbbbb;
 }
-/* line 92, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+/* line 94, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp input.title:focus {
   border: 1px solid #666666;
 }
-/* line 94, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+/* line 96, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp input.checkbox {
   position: relative;
   top: 0.25em;
 }
-/* line 97, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+/* line 99, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp input.radio {
   position: relative;
   top: 0.25em;
 }
-/* line 100, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+/* line 102, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp input.button {
   position: relative;
   top: 0.25em;
 }
-/* line 103, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+/* line 105, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp textarea {
   margin: 0.5em 0;
 }
-/* line 105, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+/* line 107, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp select {
   margin: 0.5em 0;
 }
-/* line 107, /Users/james/.rvm/gems/ree-1.8.7-2010.02/gems/compass-0.10.6/frameworks/blueprint/stylesheets/./blueprint/_ie.scss */
+/* line 109, /Users/james/.rbenv/versions/ree-1.8.7-2011.03/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
 body.bp button {
   position: relative;
   top: 0.25em;
